--- a/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
+++ b/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="login()">
+<form (ngSubmit)="login()" #form="ngForm">
   <label for="emailOrPhone">Login</label>
     <input type="text" [(ngModel)]="emailOrPhone" name="emailOrPhone" placeholder="Email or phone number" required />
   
