login con correo

--- a/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
+++ b/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
@@ -1,9 +1,9 @@
 <form (ngSubmit)="login()" #form="ngForm">
-  <label for="userName">Login</label>
+  <label for="userMail">Login</label>
   <input
     type="text"
-    [(ngModel)]="userName"
-    name="userName"
+    [(ngModel)]="userMail"
+    name="userMail"
     placeholder="Número de usuario"
     required
   />
