--- a/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
+++ b/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
@@ -4,7 +4,7 @@
     type="text"
     [(ngModel)]="userMail"
     name="userMail"
-    placeholder="Número de usuario"
+    placeholder="Correo"
     required
   />
 
