registro creado y conectado

--- a/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
+++ b/frontWebAvanzada/src/app/Components/login-form/login-form.component.html
@@ -50,7 +50,7 @@
     Or sign in with Google
   </button>
 
-  <p>Don’t have an account? <a href="#">Sign up now</a></p>
+  <p>Don’t have an account? <a routerLink="/register">Sign up now</a></p>
 </form>
 
 <!-- Para mostrar mensaje del login -->
