--- a/frontWebAvanzada/src/app/Components/Calendar/calendar-component/calendar-component.component.html
+++ b/frontWebAvanzada/src/app/Components/Calendar/calendar-component/calendar-component.component.html
@@ -1,30 +1,37 @@
+<div style="display: flex;">
+  <!-- SIDEBAR -->
+  <app-sidebar></app-sidebar>
 
-<p-toast></p-toast>
-<div class="schedule-container" style="display: flex; flex-direction: column; align-items: center; margin-top: 20px;">
+  <!-- CONTENIDO PRINCIPAL -->
+  <div style="flex: 1; padding: 20px 10px;">
+    <p-toast></p-toast>
 
-  <table class="schedule-table" style="border-collapse: collapse; width: 80%; max-width: 900px; text-align: center;">
-    <thead>
-      <tr>
-        <th style="border: 1px solid #ddd; padding: 8px;">Hora</th>
-        <th *ngFor="let day of days" style="border: 1px solid #ddd; padding: 8px;">{{ day }}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let hour of hours">
-        <td style="border: 1px solid #ddd; padding: 8px;">{{ hour }}</td>
-        <td *ngFor="let day of days"
-            [ngClass]="{'active': isActive(day, hour), 'inactive': !isActive(day, hour)}"
-            (click)="toggleSlot(day, hour)"
-            style="border: 1px solid #dddddd; padding: 8px; cursor: pointer;">
-        </td>
-      </tr>
-    </tbody>
-  </table>
+    <div class="schedule-container">
 
-  <div class="button-container" style="margin-top: 20px; width: 80%; max-width: 900px; text-align: center;">
-   <button class="guardar-btn" (click)="showSelected()">Guardar</button>
+      <h2 class="schedule-title">Horario de Tutorías</h2>
+      <table class="schedule-table" style="border-collapse: collapse; width: 100%; text-align: center;">
+        <thead>
+          <tr>
+            <th style="border: 1px solid #ddd; padding: 8px;">Hora</th>
+            <th *ngFor="let day of days" style="border: 1px solid #ddd; padding: 8px;">{{ day }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let hour of hours">
+            <td style="border: 1px solid #ddd; padding: 8px;">{{ hour }}</td>
+            <td *ngFor="let day of days"
+                [ngClass]="{'active': isActive(day, hour), 'inactive': !isActive(day, hour)}"
+                (click)="toggleSlot(day, hour)"
+                style="border: 1px solid #dddddd; padding: 8px; cursor: pointer;">
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
-  </div>
-
+      <div class="button-container">
+  <button class="guardar-btn" (click)="showSelected()">Guardar</button>
 </div>
 
+    </div>
+  </div>
+</div>
